# pyproject.toml

[tool.poetry]
name = "capture-the-flag-server"
version = "0.0.1"
description = ""
authors = [""]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
